Regression: Brushes in Sculpt, Weight, Vertex modes with Projected Falloff aren't consisent while in orthographic camera snapped to 90 axis #109555

Closed
opened 2023-06-30 14:16:25 +02:00 by Jaromir · 6 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: 3.4 (newest version of Blender that worked as expected)

Caused by 7f256e0d33

Short description of error
I found the issue in 3.5, 3.6 and 4.0 on defaults startups.
Brushes in sculpt, weight paint and vertex modes aren't working consistently when are set to Projected Falloff, and while orhographic camera snapped to 90 degree axis eg. by pressing numpad 1, numpad 3 etc.

When geometry is small, there seems to be some kind of worldspace sized bounding box deadzone around mesh in which brushes don't work. There's no issue when geometry is big enough, because some second geometry bounding box is larger than this worldspace sized one. This is weird, but I couldn't make more sense out of it, so there's a video showcasing the issue.

Just to note, brushes do work as expected in any other angles in both orthographic and perspective modes.

Exact steps for others to reproduce the error

  1. Make default cube smaller, either by object mode or edit mode
  2. In sculpt mode, pick any brush (Grab is best for testing) and change Falloff to Projected
  3. Enter orthographic mode in front/side/top view
  4. Try to move vertices using grab brush.
  5. If it still works, try make cube even smaller and try again.
  6. At some point, brush doesn't work in somekind of inflated boundingbox. It works past it and inside expected real geometry bounding box.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: 3.4 (newest version of Blender that worked as expected) Caused by 7f256e0d33dd545c6527828a05aef61beb30d8ab **Short description of error** I found the issue in 3.5, 3.6 and 4.0 on defaults startups. Brushes in sculpt, weight paint and vertex modes aren't working consistently when are set to Projected Falloff, and while orhographic camera snapped to 90 degree axis eg. by pressing numpad 1, numpad 3 etc. When geometry is small, there seems to be some kind of worldspace sized bounding box deadzone around mesh in which brushes don't work. There's no issue when geometry is big enough, because some second geometry bounding box is larger than this worldspace sized one. This is weird, but I couldn't make more sense out of it, so there's a video showcasing the issue. Just to note, brushes do work as expected in any other angles in both orthographic and perspective modes. **Exact steps for others to reproduce the error** 1. Make default cube smaller, either by object mode or edit mode 2. In sculpt mode, pick any brush (Grab is best for testing) and change Falloff to Projected 3. Enter orthographic mode in front/side/top view 4. Try to move vertices using grab brush. 5. If it still works, try make cube even smaller and try again. 6. At some point, brush doesn't work in somekind of inflated boundingbox. It works past it and inside expected real geometry bounding box.
Jaromir added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-30 14:16:26 +02:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-07-03 11:28:29 +02:00
Member

Caused by 7f256e0d33

CC @JosephEagar

Caused by 7f256e0d33dd545c6527828a05aef61beb30d8ab CC @JosephEagar
Philipp Oeser added
Module
Sculpt, Paint & Texture
Priority
High
and removed
Priority
Normal
labels 2023-07-03 11:51:22 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-04 07:28:32 +02:00
Member

Not fixed, try the file below, still not working

Not fixed, try the file below, still not working
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2023-07-04 09:42:30 +02:00
Julien Kaspar added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-07-04 10:05:04 +02:00
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-07-04 10:13:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-06 19:21:59 +02:00
Member

Em, nope, this now works wrong as well, you now have full influence if you start your stroke here

image

(same file as above)

Em, nope, this now works wrong as well, you now have full influence if you start your stroke here ![image](/attachments/68e1053d-3222-4cfb-ba21-30db54bf5e76) (same file as above)
198 KiB
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2023-07-07 09:39:14 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-08 03:53:33 +02:00
Member

@lichtwerk / @JosephEagar , any chance we can backport this fix to LTS?

@lichtwerk / @JosephEagar , any chance we can backport this fix to LTS?
Member

I would rely on @JosephEagar opinion here if this should be backported, also : would this need all 3 commits?

I would rely on @JosephEagar opinion here if this should be backported, also : would this need all 3 commits?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109555
No description provided.