Sculpt: Second attempt at fix #109555: Fix floating-point error.